--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
         <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="plant.css">
+        <link rel="stylesheet" href="style.css">
 
         <title>plants website</title>
     </head>
@@ -504,6 +504,6 @@
         <script src="assets/js/scrollreveal.min.js"></script>
         
         <!--=============== MAIN JS ===============-->
-        <script src="plant.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
