--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <section class="contact section container" id="contact">                
                 <div class="contact__container grid">
                     <div class="contact__box">
-                        <h2 class="section__title">
+                        <h2 class="contact__title">
                             Reach out to us today <br> via any of the given <br> information
                         </h2>
 
